# ITMO_ASM

./: README.md
memcpy/: CMakeLists.txt  memcpy.cpp  memcpy_test.cpp
mul/: mul.asm  tester.py
sub/: sub.asm  tester.py
utils/: read_write.asm
word_count/: CMakeLists.txt  word_count.cpp  word_count_test.cpp
